--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/analysis_of_end_to_end_latency.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/analysis_of_end_to_end_latency.tex
@@ -105,7 +105,7 @@
 %         \item 分析の目的で, 1 つの CPU コア (セグメント $\Phi_{i}$ と呼ばれる) 上のチェーン $\Gamma^{c}$ の連続したサブセットは, 単一の人為的なコールバックと見なすことができる
 %         \item これは, $\Gamma^{c}$ のタイマコールバックがその期間に基づいて到着すると, 残りのコールバックが前のコールバックの完了によって直接トリガされ, それらの間に自己誘発レイテンシがないためである
 %         \item チェーンが複数の CPU コアで実行される場合, 複数のセグメントに分解できる
-%         \item したがって, チェーンのエンドツーエンドの分析は, (i) チェーンの各セグメントの最悪の場合の応答時間 (WCRT) を計算し, (ii) 全てのセグメントの WCRT を合計するという 2 つのステップで実行できる
+%         \item したがって, チェーンのエンドツーエンドの分析は, (i) チェーンの各セグメントの最悪応答時間 (WCRT) を計算し, (ii) 全てのセグメントの WCRT を合計するという 2 つのステップで実行できる
 %         \item 指定されたチェーンの図 6 は, 3 つのセグメントを持つチェーンの例を示している
 %         \item 各ステップを提示し, 分析がどのように行われるかを説明する
 %     \end{itemize}
@@ -183,7 +183,7 @@
 
 % \begin{frame}[label=lemma3]{Lemma 3}
 %     \begin{lemma}[]
-%         $R_{c, i}^{n}$ で示されるセグメント $\Phi_{i} \subset$  $\Gamma^{c}$ の最悪の場合の応答時間は, 次の繰り返しによって制限される
+%         $R_{c, i}^{n}$ で示されるセグメント $\Phi_{i} \subset$  $\Gamma^{c}$ の最悪応答時間は, 次の繰り返しによって制限される
 
 %         \begin{equation*}
 %             R_{c, i}^{n+1} \leftarrow B_{i}+\sum_{\forall j: \tau_{j} \in \Phi_{i}} C_{j}+\sum_{\substack{\forall: \tau_{k} \in e\left(\Phi_{i}\right) \vee \\ \tau_{k} \in e_{H P}}} \eta_{i}\left(R_{c, i}^{n}, \tau_{k}\right) \times C_{k}
