--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/evaluation.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/evaluation.tex
@@ -9,8 +9,8 @@
     \end{itembox}
     \begin{itembox}[l]{\textbf{流れ}}
         \begin{itemize}
-            \item 自動運転ソフトウェアを実行する実際のプラットフォームでケーススタディを実施し, PiCAS の実際の有効性を特定する
-            \item ランダムに生成されたワークロードを使用してスケジューリング実験を行い, PiCAS とデフォルトの ROS2 スケジューラのパフォーマンス特性を調査する
+            \item 実際のプラットフォームでケーススタディを実施し, PiCAS の実際の有効性を特定
+            \item ランダムに生成されたワークロードを使用してスケジューリングシミュレーションを行い, PiCAS とデフォルトの ROS2 スケジューラのパフォーマンス特性を調査
         \end{itemize}
     \end{itembox}
 \end{frame}
@@ -32,9 +32,9 @@
 
 \begin{frame}{実装の詳細2}
     \begin{itemize}
-        \item ROS2 では, エグゼキュータが通信層と対話して, readyコールバックをそのキューにフェッチする
-        \item スケジューラの実装は, コールバックが完了するたびにこれらのキューを更新する
-        \item もし 1 つ以上のコールバックがキューに準備されている場合, 我々のスケジューラは, ROS2のデフォルトの割り当てに従うのではなく, 提案された優先度割り当て (alg1) により決定された最も高い優先度を持つコールバックを選択する
+        \item ROS2 では, エグゼキュータが通信層と対話して, readyコールバックをキューにフェッチする
+        \item スケジューラはコールバックが完了するたびにキューを更新する
+        \item もし 1 つ以上のコールバックがキューに準備されている場合, PiCASは, \hlink{alg1}{提案優先度割り当てアルゴリズム} により決定された最も高い優先度を持つコールバックを選択する
     \end{itemize}
 \end{frame}
 
@@ -57,7 +57,7 @@
         分析なしの ROS2 デフォルトスケジューラ
     \end{block}
     \begin{block}{ROS2-SD}
-        リソース予約と最悪の場合の応答時間分析を備えた ROS2 デフォルトスケジューラ~\cite{casini2019response}
+        リソース予約と最悪応答時間分析を備えた ROS2 デフォルトスケジューラ~\cite{casini2019response}
         \notes{リソース予約は, Linux システムで SCHED\_DEADLINE ポリシーを使用して実装できる}
     \end{block}
     \begin{block}{ROS2-PiCAS}
@@ -66,16 +66,14 @@
 \end{frame}
 
 \begin{frame}{コールバックの WCET計測方法}
-    \begin{itemize}
-        \item 分析のために, 組み込みプラットフォームでの 5,000 回の実行から各コールバックの実行時間を測定し, そのコールバックの WCET として観測された最大のものを選択した
-    \end{itemize}
+    組み込みプラットフォームでの 5,000 回の実行から各コールバックの実行時間を測定し, そのコールバックの観測された最大の実行時間を WCET として選択した
 \end{frame}
 
 \begin{frame}{ケーススタディ I (ユニプロセッサシステム)}
     \fitimage{
         \begin{itemize}
-            \item 特定の利用可能な予算に対するチェーンレイテンシを評価する
-            \item 図は, ユニプロセッサ環境の 2 つのチェーンで構成されるこのケーススタディを示している
+            \item ユニプロセッサ環境における, 特定の利用可能な予算に対するチェーンレイテンシを評価する
+            \item 図はケーススタディ I のチェーン構成を示す
         \end{itemize}
     }{case_study1}
 \end{frame}
@@ -83,21 +81,21 @@
 \begin{frame}{ケーススタディ I 実験環境}
     \begin{itemize}
         \item コールバックは特定の予算額で同じ予約に割り当てられ, コールバックの優先度は ROS2-SD のコールバックのインデックスの降順で与えられる
-        \item チェーン $1\left(\Gamma^{1}\right)$ はチェーン $2\left(\Gamma^{2}\right)$ よりも優先度が高いと見なし, この情報を ROS2-PiCAS でコールバック優先度割り当てとノード割り当てに使用する
-        \item ROS2PiCAS での予算の影響を評価するために, 2 つのチェーン $\left(\Gamma^{1}\right.$ および $\left.\Gamma^{2}\right)$ と同じ周期 (すなわち,  $80 \mathrm{~ms}$ ) で実行されるが, システムで最も高いリアルタイム優先度を持つ定期的なスレッドを作成した
-        \item このスレッドを使用して, そのスレッドの実行時間を調整することで, ROS2-PiCAS の利用可能な予算を制限する
+        \item チェーン $1\left(\Gamma^{1}\right)$ はチェーン $2\left(\Gamma^{2}\right)$ よりも優先度が高いとする
+        \item ROS2PiCAS での予算の影響を評価するために, 2 つのチェーン $\left(\Gamma^{1}\right.$ および $\left.\Gamma^{2}\right)$ と同じ周期で実行され, システムで最も高い優先度を持つ定期的なスレッドを作成した
+        \item このスレッドの実行時間を調整することで, ROS2-PiCAS の利用可能な予算を制限する
     \end{itemize}
 \end{frame}
 
 \begin{frame}{ケーススタディ I 結果}
     \fitimage{
-        図は, 2 つのアプローチでのチェーンのエンドツーエンドのレイテンシを示す
+        2 つのアプローチでのチェーンのエンドツーエンドのレイテンシ
     }{case_study1_result}
 \end{frame}
 
 \begin{frame}{ケーススタディ I 考察1}
     \begin{itemize}
-        \item 利用可能な予算が増加するにつれて, 両方のアプローチのレイテンシが減少する
+        \item 利用可能な予算が増加するにつれて, 両方のアプローチのレイテンシが減少
         \item ROS2-PiCAS のチェーン 1 は ROS2-SD よりもレイテンシが低くなる
     \end{itemize}
 \end{frame}
@@ -113,86 +111,89 @@
     \fitimage{
         \begin{itemize}
             \item 実際のシナリオでのチェーン考慮スケジューリングの有効性を評価する
-            \item 図は, このケーススタディにおけるチェーン構成を示している
+            \item 図はケーススタディ II のチェーン構成を示す
         \end{itemize}
     }{case_study2}
 \end{frame}
 
-\begin{frame}{ケーススタディ II 実験環境}
+\begin{frame}{ケーススタディ II 実験環境1}
     \begin{itemize}
-        \item より低いインデックスチェーンはより高い優先度を持つと仮定する
-        \item チェーンの優先度を指定して, ROS2-PiCAS をノード割り当てに使用する
+        \item チェーンのインデックスが小さい程, 高い優先度を持つとする
         \item 最初にチェーン 1 からチェーン 4 をそれぞれ異なる CPU コアに割り当て, 次に負荷分散方式でその他を分散する
-        \item 割り当て後の各 CPU コアの利用率は, 平均で $0.97$ である
-        \item デフォルトの ROS2 スケジューラと以前の研究 [11] では割り当て方式が提供されていないため, ROS2 と ROS2-SD では, 同じノードからコアへの割り当てと, コアごとに 1 つのエグゼキュータを使用した
-        \item ROS2-SD では, 各コアのリソース予約バジェットも $100 \%$ に設定した
+        \item 割り当て後の各 CPU コアの利用率は, 平均で $0.97$
+        \item デフォルトの ROS2 スケジューラと以前の研究 [11] では割り当て方式が提供されていないため, ROS2 と ROS2-SD では, 同じノードからコアへの割り当てと, コアごとに 1 つのエグゼキュータを使用する
+        \item ROS2-SD では, 各コアのリソース予約額を $100 \%$ に設定する
+    \end{itemize}
+\end{frame}
+
+\begin{frame}[label=latency]{ケーススタディ II 実験環境2}
+    \begin{itemize}
+        \item 実験で観測されたレイテンシは, タイマコールバックの実行開始時刻を記録することで得られたものであり, リリース時刻ではない
+        \item これは, ROS2が最初のリリースオフセットを設定するためのサポートを欠いているため
+        \forme{
+            \item しかし, ROS2-PiCASでは, チェーン1--4はそれぞれ異なるCPUコアの最も優先度が高いエグゼキュータに割り当てられているため, その開始時刻とリリース時刻は全く同じである
+            \item チェーン5とチェーン6がそれぞれチェーン1とチェーン4と同じCPUコアに割り当てられていても, ROS2-PiCAS下では, それらのエグゼキュータの優先度と周期を考慮すれば, リリース時間ベースのレイテンシを容易に見積もることができる
+            \item しかし, ROS2およびROS2-SDでは, リリース時間ベースのレイテンシを直感的に見積もることができない
+        }
     \end{itemize}
 \end{frame}
 
 \begin{frame}{ケーススタディ II 結果1}
     \fitimage{
-        図は, 3 つのアプローチで観察されたチェーンのエンドツーエンドのレイテンシを示している
+        3 つのアプローチで観察されたチェーンのエンドツーエンドのレイテンシ
     }{case_study2_result_a}
 \end{frame}
 
-% \begin{frame}{ケーススタディ II 結果1}
-%     \fitimage{
-%         図は, 測定から観測された最大レイテンシと分析されたレイテンシの比較を示す
-%     }{case_study2_result_b}
-% \end{frame}
-
-% \begin{frame}{ケーススタディ II 考察}
-%     \begin{itemize}
-%         \item 本論文の実験で観測されたレイテンシは, リリース時刻ではなく, タイマコールバック実行の開始時間を記録することによって得られたことを明確にする
-%         \item これは, 初期リリースオフセットの設定に対する ROS2 のサポートがないために避けられなかったものである
-%         \item しかし, チェーン 1 からチェーン 4 の開始時間は, ROS2-PiCAS でのリリース時刻と全く同じであることに注意
-%         \item これは, それぞれが異なる CPU コア上の最も優先度の高いエグゼキュータに割り当てられているためである
-%         \item チェーン 5 とチェーン 6 がそれぞれチェーン 1 (CPU 1) とチェーン 4 (CPU 4) と同じ CPU コアに割り当てられている場合でも, エグゼキュータの優先度 (すなわち,, 各 CPU コアで 2 番目に優先度の高いエグゼキュータ) と, ROS2-PiCAS の下での期間 (すなわち, 他のチェーンとの調和)
-%         \item しかし, ROS2 および ROS2-SD でのリリース時刻ベースのレイテンシを直感的に見積もることはできない
-%     \end{itemize}
-% \end{frame}
+\begin{frame}{ケーススタディ II 結果1}
+    \fitimage{
+        測定から観測された最大レイテンシと分析されたレイテンシの比較
+    }{case_study2_result_b}
+\end{frame}
 
 \begin{frame}{ケーススタディ II PiCASの優れている点}
     \begin{itemize}
-        \item 予想どおり, ROS2-PiCAS はほとんどのリアルタイムチェーン (チェーン 1 からチェーン 5 など) で他のチェーンよりも優れている
-        % \item さらに, レイテンシ分析では, これらのリアルタイムチェーンの上界がより厳しくなっている
+        \item ROS2-PiCAS はほとんどのチェーンで他のチェーンよりも優れている
+        \item レイテンシ分析では, チェーンの上界がより厳しくなっている
     \end{itemize}
 \end{frame}
 
 \begin{frame}{ケーススタディ II PiCASの問題点}
-    \begin{itemize}
-        \item しかし, ROS2-PiCAS でのチェーン 6 の観測および分析されたレイテンシは, 他のものよりも悪いことが分かる
-        \item この現象については, 次の 2 つの理由から説明する
-    \end{itemize}
+    \begin{columns}
+    \begin{column}{0.8\textwidth}
+        \begin{itemize}
+            \item ROS2-PiCAS でのチェーン 6 の観測および分析されたレイテンシは, 他の手法より悪い
+            \item この現象を次の 2 つの理由から説明する
+        \end{itemize}
+    \end{column}
+    \begin{column}{0.2\textwidth}
+        \fullimage{chain6_latency}
+    \end{column}
+    \end{columns}
 \end{frame}
 
-\begin{frame}{PiCASの問題点の理由1}
-    \begin{itemize}
-        \item ROS2-PiCAS では, 優先度の高いチェーン $4(T=100 \mathrm{~ms}$ と $C=45.1 \mathrm{~ms})$ がチェーン 6 ( $T=1000 \mathrm{~ms}$ と $C=197.6 \mathrm{~ms}$ ) に複数回干渉する可能性があるが, ROS2 スケジューラのデフォルトのノンプリエンプティブコールバック実行および公平性に基づくスケジューリングによりチェイン 4 とチェイン 6 が互いに 1 回 だけブロックできる
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{PiCASの問題点の理由2}
-    \begin{itemize}
-        \item ROS2およびROS2-SDにおけるチェーン6の観測レイテンシは, 上述のようにタイマコールバックの開始時刻を用いて得られるため, チェーン4からのブロック時間は含まれない
-        \item 後者の理由により, より明確な証明がチェーン 4 に見られる
-        \item ノンプリエンプティブのため, ROS2およびROS2-SDにおけるチェーン4の待ち時間は, 少なくともチェーン6の実行時間より大きくなるはずであると予想される.
-        \item しかし, 観測された待ち時間にはチェーン6の実行時間は含まれていない.
-        % \item ROS2-SDにおける連チェーン4の待ち時間の観測値と解析値の差が大きい（図9bの265.5ms と $1804 \mathrm{~ms}$）ことは, この議論を補強しています.
-    \end{itemize}
+\begin{frame}{PiCASの問題点の理由}
+    \vspace{1mm}
+    \begin{block}{理由1}
+        \setlength{\linewidth}{0.98\columnwidth}
+        \begin{itemize}
+            \item ROS2-PiCAS では, 優先度の高いチェーン 4 がチェーン 6 に複数回干渉する可能性がある
+        \item 対してデフォルト ROS2 スケジューラでは, ノンプリエンプティブコールバック実行および公平性に基づくスケジューリングにより, チェイン 4 とチェイン 6 が互いに 1 回 だけブロックできる
+        \end{itemize}
+    \end{block}
+    \begin{block}{理由2}
+        ROS2およびROS2-SDにおけるチェーン6の観測レイテンシは, タイマコールバックの開始時刻を用いて得られるため, チェーン4からのブロック時間は含まれない
+    \end{block}
 \end{frame}
 
 \begin{frame}{ケーススタディ II 考察結論}
-    \begin{itemize}
-        \item 結論として, PiCAS はエンドツーエンドのチェーンレイテンシに大きなメリットをもたらし, 優先度を尊重しながらチェーンをスケジュールできることが分かった
-    \end{itemize}
+    PiCAS はエンドツーエンドのチェーンレイテンシを大きく改善し, 優先度を尊重してチェーンをスケジュールできる
 \end{frame}
 
 
 \begin{frame}{ケーススタディ III (過負荷シナリオ)}
     \begin{itemize}
         \item 過負荷のシステム設定でのレイテンシの動作を評価する
-        \item ケーススタディ II にさらに 4 つのベストエフォートチェーンを追加することで, 各 CPU コアの利用率を平均で $1.25$ にした
+        \item ケーススタディ II にさらに 4 つのチェーンを追加することで, 各 CPU コアの利用率を平均で $1.25$ にした
     \end{itemize}
 \end{frame}
 
@@ -202,75 +203,63 @@
 
 \begin{frame}{ケーススタディ III 考察}
     \begin{itemize}
-        \item ROS2-PiCAS は, リアルタイムチェーンの他のアプローチよりも大幅に優れている
-        \item 特に, ROS2-PiCAS は, 最も重要なチェーン, すなわちチェーン 1 とチェーン 2 の平均エンドツーエンドレイテンシをそれぞれ $85 \%$ と $90 \%$ まで削減する
-        \item さらに, ROS2-PiCAS の分析ではリアルタイムチェーンの厳密な上界が示されたが, ROS2-SD の分析ではこの過負荷システムのテストに失敗した
+        \item ROS2-PiCAS は, 最も重要なチェーン, すなわちチェーン 1 とチェーン 2 の平均エンドツーエンドレイテンシをそれぞれ $85 \%$ と $90 \%$ まで削減する
+        \item ROS2-PiCAS の分析ではチェーンの厳密な上界が示されたが, ROS2-SD の分析ではこの過負荷システムのテストに失敗した
     \end{itemize}
 \end{frame}
 
 
+\subsection{Schedulability experiments}
+\label{ssec: schedulability experiments}
 
-% \subsection{Schedulability experiments}
-% \label{ssec: schedulability experiments}
+\begin{frame}{セクションサマリ}
+    \begin{itembox}[l]{\textbf{目的}}
+        \begin{itemize}
+            \item ROS2-SD および ROS2-PiCAS でのチェーンのスケジューラビリティを評価する
+            \item これらのアプローチの分析実行時間も評価する
+        \end{itemize}
+    \end{itembox}
+\end{frame}
 
-% \begin{frame}{セクションサマリ}
-%     \begin{itembox}[l]{\textbf{目的}}
-%         \begin{itemize}
-%             \item ROS2-SD および ROS2-PiCAS でのチェーンのスケジューラビリティを評価する
-%             \item これらのアプローチの分析実行時間も評価する
-%         \end{itemize}
-%     \end{itembox}
-% \end{frame}
+\begin{frame}{実験マシン}
+    全ての実験は, デュアル AMD EPYC 7452 $2.35 \mathrm{GHz}$ プロセッサを搭載したマシンで行われる
+\end{frame}
 
-% \begin{frame}{実験マシン}
-%     全ての実験は, デュアル AMD EPYC 7452 $2.35 \mathrm{GHz}$ プロセッサを搭載したマシンで行われる
-% \end{frame}
+\begin{frame}{ワークロードの生成方法}
+    \begin{itemize}
+        \item ワークロードセットの利用率を, 4 コア環境の $\{2.5,3.0,3.5\}$ から選択
+        \item 利用率ごとにランダムに生成された 1,000 個のワークロードセットを使用
+        \item ワークロードセットごとに各5つのコールバックを持つ 9 つのチェーンを使用
+        \item チェーン周期は $[50,1000]$ ms の範囲でランダムに選択され, デッドラインは周期に等しく設定される
+        \item 各チェーンの利用率は 1.0 を超えない
+        \item 各ワークロードセットの生成後, インデックスの小さいチェーンほど周期が短くなるようにチェーンの順序を変更し, インデックスの小さいチェーンにはより高い優先度を割り当てる
+    \end{itemize}
+\end{frame}
 
-% \begin{frame}{ワークロードの生成方法}
-%     \begin{itemize}
-%         \item システムの利用率ごとに, ランダムに生成された 1,000 個のワークロードセットのコールバックを使用する
-%         \item ワークロードセットの利用率は, 4 コア環境の $\{2.5,3.0,3.5\}$ から選択される
-%         \item ワークロードセットごとに, 9 つのチェーンを形成する 45 のコールバックを使用する
-%         \item すなわち, 各チェーンは 5 つのコールバックで構成される
-%         \item 各コールバックの利用率は, UUniFast アルゴリズム [10] によって取得される
-%         \item チェーン期間は $[50,1000] \mathrm{ms}$ の範囲でランダムに選択され, デッドラインはその期間に等しく設定される
-%         \item 各チェーンの利用率は 1.0 を超えません
-%         \item 各ワークロードセットの生成後, インデックスの小さいチェーンほど期間が短くなるようにチェーンの順序が変更され, インデックスの小さいチェーンにはより高い優先度が割り当てられる
-%     \end{itemize}
-% \end{frame}
+\begin{frame}{スケジューラビリティテストの比較 [結果]}
+    \fullimage{schedulability_result1}
+\end{frame}
 
-% \begin{frame}{スケジューラビリティテストの比較 [結果]}
-%     \fullimage{schedulability_result1}
-% \end{frame}
+\begin{frame}{スケジューラビリティテストの比較 [結果考察]}
+    \begin{itemize}
+        \item どちらのアプローチでも, 利用率が高くなるとスケジューラビリティは低下する
+        \item ROS2-PiCAS は, 全ての利用設定で ROS2-SD よりも大幅に優れている
+        \item ROS2-PiCAS では, チェーン 1--4 は, それぞれ CPU コア上の最も優先度の高いエグゼキュータに割り当てられるため, 常にスケジュール可能
+        \item ROS2-PiCAS ではチェーンの優先度が低くなると, スケジューラビリティが低下する
+        \item ROS2-SD では, チェーンデッドラインが短くなるにつれてスケジューラビリティが減少する
+    \end{itemize}
+\end{frame}
 
-% \begin{frame}{スケジューラビリティテストの比較 [結果考察]}
-%     \begin{itemize}
-%         \item どちらのアプローチでも, 利用率が高くなると, スケジューリング可能率は低下する
-%         \item ROS2-PiCAS は, 全ての利用設定で ROS2-SD よりも大幅に優れている
-%         \item ROS2-PiCAS では, 最初の 4 つのチェーン (チェーン 1 からチェーン 4 まで) は, それぞれが異なる CPU コア上の最も優先度の高いエグゼキュータに割り当てられるため, 常にスケジュール可能である
-%         \item さらに, ROS2-PiCAS は優先度に基づいてチェーンに優先度を付けるため, チェーンの優先度が低くなる (チェーンインデックスが高くなる) と, スケジュール可能率が低下する
-%         \item 一方, ROS2-SD では, チェーンデッドラインが短くなるにつれて比率が減少することが分かる (チェーンインデックスが低くなる)
-%         \item これは主に, ケーススタディ I (セクション VII-B.)
-%     \end{itemize}
-% \end{frame}
+\begin{frame}{解析実行時間の比較 [結果]}
+    \fitimage{
+        ROS2-SD と ROS2-PiCAS について, 各ワークロードセットに対するエンドツーエンドレイテンシ分析の実行時間を比較
+    }{analysys_time_result}
+\end{frame}
 
-% \begin{frame}{解析実行時間の比較 [実験環境]}
-%     \begin{itemize}
-%         \item この実験では, ROS2-SD と ROS2-PiCAS について, 各ワークロードセットのエンドツーエンドのレイテンシを計算する時間である分析の実行時間を比較する
-%         \item 各分析ツールはシングルスレッドである分析の実行時間は, ワークロードセットの利用率によって自明に影響を受ける
-%         \item したがって, 以前と同じワークロードセットを使用する
-%         \item ワークロードセットあたりの利用率は $2.5, 3.0, 3.5$ である
-%     \end{itemize}
-% \end{frame}
-
-% \begin{frame}{解析実行時間の比較 [結果]}
-%     \fullimage{analysys_time_result}
-% \end{frame}
-
-% \begin{frame}{解析実行時間の比較 [結果考察]}
-%     \begin{itemize}
-%         \item どちらのアプローチでも利用率が上がると解析時間は長くなるが, ROS2-SD は ROS2-PiCAS よりもはるかに遅くなる
-%         \item これは, ROS2-PiCAS とは異なり, ROS2-SD 分析の探索空間は可能な限り長いビジー間隔 (利用率とともに増加する傾向がある) のためであり, 分析は全ての応答時間が収束するグローバルな固定点を繰り返し探索するためである [11]
-%         \item したがって, チェーン考慮スケジューラの提案された分析は, 既存のアプローチよりもはるかに高速であり, 複雑なシステムやランタイムアドミッションコントロールに適用できると結論付けている
-%     \end{itemize}
-% \end{frame}
+\begin{frame}{解析実行時間の比較 [結果考察]}
+    \begin{itemize}
+        \item どちらのアプローチでも利用率が上がると分析時間は長くなるが, ROS2-SD は ROS2-PiCAS よりもはるかに遅い
+        \forme{\item ROS2-SD 分析の探索空間は可能な限り長いビジー間隔であり, 分析は全ての応答時間が収束するグローバルな固定点を繰り返し探索する~\cite{casini2019response}}
+        \item 提案された分析は既存のアプローチよりもはるかに高速であり, 複雑なシステムへの適用やランタイム制御が可能
+    \end{itemize}
+\end{frame}
