--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/priority_driven_chain_aware_scheduling.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/priority_driven_chain_aware_scheduling.tex
@@ -192,7 +192,7 @@
     \fullimage{alg1}
 \end{frame}
 
-\begin{frame}{コールバック優先度割り当てアルゴリズム補足}
+\begin{frame}[label=alg1]{コールバック優先度割り当てアルゴリズム補足}
     \fullimage{alg1_sup.jpg}
 \end{frame}
 
