--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/bachground.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/bachground.tex
@@ -184,7 +184,7 @@
         \item しかし, 応答時間はリリースジッターにも依存するため, 周期的な依存関係が生じる
         \item この問題を解決するために, 分析はゼロの初期ジッターで開始し, 収束が達成されるまで繰り返し応答時間分析を適用し, 全てのジッター境界を更新する [42,63]
         \item 収束は, 応答時間とジッタの間の単調な依存性によって (過負荷のないシステムの場合) 保証される (ジッタが大きいほど, 応答時間は長くなり, その逆も同様である)
-        \item 基本的な CPA アプローチでは, チェーンのエンドツーエンドのレイテンシを, 各タスクの個々の応答時間の境界の合計で制限する
+        \item 基本的な CPA アプローチでは, チェーンのエンドツーエンドレイテンシを, 各タスクの個々の応答時間の境界の合計で制限する
         \item その後, [54, 56] のように, 解析精度を向上させる拡張機能が設計された
     \end{itemize}
 \end{frame}
