--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/introduction.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/introduction.tex
@@ -21,9 +21,9 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item このような制御パスを安全に実装するには, タイムクリティカルな処理チェーンのエンドツーエンドのレイテンシ (または応答時間) を予測する必要がある
+        \item このような制御パスを安全に実装するには, タイムクリティカルな処理チェーンのエンドツーエンドレイテンシ (または応答時間) を予測する必要がある
         \item 例えば, このようなチェーンは, センサからコントローラーを介して最終的なアクチュエーターまでの全てのステップをカバーし, 複数のソフトウェアコンポーネント, 複数のコア, さらには複数のホストにまたがる場合がある
-        \item エンドツーエンドのレイテンシの問題は文献で十分に研究されているが, 既存の研究では多くの場合, 実際のシステムに直接適用できるとは限らない理想化されたスケジューリングモデルが想定されている
+        \item エンドツーエンドレイテンシの問題は文献で十分に研究されているが, 既存の研究では多くの場合, 実際のシステムに直接適用できるとは限らない理想化されたスケジューリングモデルが想定されている
     \end{itemize}
 \end{frame}
 
