--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/analysis_of_end_to_end_latency.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/analysis_of_end_to_end_latency.tex
@@ -5,7 +5,7 @@
 
 \begin{frame}{セクションサマリ}
     \begin{itembox}[l]{\textbf{目的}}
-        PiCASの下でのチェーンのエンドツーエンドのレイテンシ分析を示す
+        PiCASの下でのチェーンのエンドツーエンドレイテンシ分析を示す
     \end{itembox}
 \end{frame}
 
@@ -210,7 +210,7 @@
 
 % \begin{frame}{セクションサマリ}
 %     \begin{itembox}[l]{\textbf{目的}}
-%         提案されたチェーン考慮スケジューリングフレームワークで, 特定のチェーンのエンドツーエンドのレイテンシを分析する
+%         提案されたチェーン考慮スケジューリングフレームワークで, 特定のチェーンのエンドツーエンドレイテンシを分析する
 %     \end{itembox}
 % \end{frame}
 
