--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/background_and_system_model.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/background_and_system_model.tex
@@ -85,7 +85,7 @@
 %         \item アプリケーション開発者はチェーンを構築できる
 %         \item チェーンは, 1 つ以上のノードのコールバック間のメッセージ交換によって定義される
 %         \item ROS2 はチェーンのプロパティを定義せず, エグゼキュータはコールバックスケジューリングでチェーンのタイミングとリソース要件を考慮しない
-%         \item しかし, チェーンのエンドツーエンドのレイテンシは, 安全性が重要なリアルタイムシステムのパフォーマンスに大きな影響を与えるため, 本論文では, チェーンのスケジューリング, リソース割り当て, および分析に焦点を当てる
+%         \item しかし, チェーンのエンドツーエンドレイテンシは, 安全性が重要なリアルタイムシステムのパフォーマンスに大きな影響を与えるため, 本論文では, チェーンのスケジューリング, リソース割り当て, および分析に焦点を当てる
 %     \end{itemize}
 % \end{frame}
 
