--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/evaluation.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/evaluation.tex
@@ -89,7 +89,7 @@
 
 \begin{frame}{ケーススタディ I 結果}
     \fitimage{
-        2 つのアプローチでのチェーンのエンドツーエンドのレイテンシ
+        2 つのアプローチでのチェーンのエンドツーエンドレイテンシ
     }{case_study1_result}
 \end{frame}
 
@@ -140,7 +140,7 @@
 
 \begin{frame}{ケーススタディ II 結果1}
     \fitimage{
-        3 つのアプローチで観察されたチェーンのエンドツーエンドのレイテンシ
+        3 つのアプローチで観察されたチェーンのエンドツーエンドレイテンシ
     }{case_study2_result_a}
 \end{frame}
 
