--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/introduction.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/introduction.tex
@@ -50,7 +50,7 @@
     先行研究には以下２つの課題がある
     \begin{itemize}
         \item エグゼキュータ内のスケジューリング動作にのみ焦点を当てており, マルチコアシステムのエグゼキュータと CPU コアへのスケジューリングエンティティの割り当ては考慮されていない
-        \item エンドツーエンドのレイテンシ分析は, ROS2 スケジューリングアーキテクチャの制限に悩まされ, 新しいスケジューラ設計の開発の動機となっている
+        \item エンドツーエンドレイテンシ分析は, ROS2 スケジューリングアーキテクチャの制限に悩まされ, 新しいスケジューラ設計の開発の動機となっている
     \end{itemize}
 \end{frame}
 
@@ -66,14 +66,14 @@
     \begin{itemize}
         \item  コールバックの優先度の割り当てと, マルチコアプラットフォームの CPU コアへのエグゼキュータおよびエグゼキュータへのノードの割り当てを含む PiCAS の設計を提示する
         \item PiCAS は, チェーンのエンドツーエンドのタイミング要件を尊重しながら, コールバックとエグゼキュータを実行する
-        \item  提案されたPiCASフレームワークの下で, チェーンのエンドツーエンドのレイテンシを上界とする分析を開発する
-        \item 分析は, チェーンのエンドツーエンドのレイテンシの安全な境界を提供する
+        \item  提案されたPiCASフレームワークの下で, チェーンのエンドツーエンドレイテンシを上界とする分析を開発する
+        \item 分析は, チェーンのエンドツーエンドレイテンシの安全な境界を提供する
     \end{itemize}
 \end{frame}
 
 \begin{frame}{貢献 2}
     \begin{itemize}
         \item 組み込みプラットフォームでの実用的なシナリオを使用したケーススタディと, ランダムなワークロードを使用したスケジューラビリティの実験を実施した
-        \item 実験結果は, 提案されたスケジューラがデフォルトの ROS2 スケジューラおよび最新の分析作業よりもエンドツーエンドのレイテンシを大幅に改善することを示している
+        \item 実験結果は, 提案されたスケジューラがデフォルトの ROS2 スケジューラおよび最新の分析作業よりもエンドツーエンドレイテンシを大幅に改善することを示している
     \end{itemize}
 \end{frame}
