--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/main.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/main.tex
@@ -25,8 +25,8 @@
 
 \maketitle
 
-% \summary
-% \input{abstract.tex}
+\summary
+\input{abstract.tex}
 
 \begin{frame}{Outline}
     \setbeamertemplate{section in toc}[sections numbered]
@@ -39,8 +39,8 @@
 % \input{challenges.tex}
 % \input{priority_driven_chain_aware_scheduling.tex}
 % \input{analysis_of_end_to_end_latency.tex}
-\input{evaluation.tex}
-\input{conclusion.tex}
+% \input{evaluation.tex}
+% \input{conclusion.tex}
 
 \lastpage
 
