--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/conclusion.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/conclusion.tex
@@ -5,16 +5,16 @@
 
 \begin{frame}{本論文の提案}
     \begin{itemize}
-        \item 優先度駆動型のチェーン考慮スケジューリングと, そのエンドツーエンドのレイテンシ解析フレームワークを提案した
-        \item チェーンの重要度に基づいてエンドツーエンドのレイテンシを削減するために, エグゼキュータ内およびエグゼキュータ間のコールバックのスケジューリングポリシーを提案した
-        \item これらのスケジューリングポリシーを実現するコールバック優先度割り当てとチェーン考慮ノード割り当てアルゴリズムを提示した
+        \item 優先度駆動型のチェーン考慮スケジューリングと, そのエンドツーエンドレイテンシ解析フレームワークを提案した
+        \item チェーンの重要度に基づいてエンドツーエンドレイテンシを削減するために, エグゼキュータ内およびエグゼキュータ間のコールバックのスケジューリング戦略を提案した
+        \item スケジューリング戦略を実現するコールバック優先度割り当てとチェーン考慮ノード割り当てアルゴリズムを提示した
         \item NVIDIA Xavier NX プラットフォーム上で動作する ROS2 の Eloquent Elusor バージョンにスケジューラを実装した
     \end{itemize}
 \end{frame}
 
 \begin{frame}{評価結果}
     \begin{itemize}
-        \item ケーススタディの結果は, 提案されたスケジューラが実際のシナリオでのエンドツーエンドのレイテンシに関して, 既存の ROS2 スケジューリングよりも優れていることを示した
+        \item ケーススタディの結果は, 提案されたスケジューラが実際のシナリオでのエンドツーエンドレイテンシに関して, 既存の ROS2 スケジューリングよりも優れていることを示した
         \item また, 分析技術がレイテンシの上界を厳密に制限し, 最先端技術と比較してスケジューラビリティが向上することを示した
     \end{itemize}
 \end{frame}
