--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/related_work.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/related_work.tex
@@ -21,7 +21,7 @@
     以下のような研究があるが, 分析的なリアルタイム性の保証はしていない
     \begin{itemize}
         \item 透過的な CPU／GPU 連携メカニズムに基づくリアルタイム拡張を提案 \cite{suzuki2018real}
-        \item 分散システムにおける ROS 2 のエンドツーエンドのレイテンシを研究 \cite{kronauer2021latency}
+        \item 分散システムにおける ROS 2 のエンドツーエンドレイテンシを研究 \cite{kronauer2021latency}
         \item ROS 2 の標準的な rclcpp エグゼキュータ を Callback-group-level エグゼキュータ と呼ばれるリアルタイムエクゼキュータに置き換え, その結果得られる性能を調査 \cite{yang2020exploring}
     \end{itemize}
 \end{frame}
@@ -60,7 +60,7 @@
 \begin{frame}{トリガチェーンの分析の既存研究}
     \begin{itemize}
         \item トリガチェーンの応答時間を分析するための最も一般的なフレームワークの 2 つは, 構成パフォーマンス分析 \cite{henia2005system} とリアルタイム微積分 \cite{chakraborty2003general} であり, これらに基づいて \cite{schlatow2016response} は, 同期通信と非同期通信を使用する一連のスレッドの応答時間を計算した
-        \item 複数のプロセッサを横断するトリガチェーンのエンドツーエンドのレイテンシを最適化 \cite{schliecker2009recursive}
+        \item 複数のプロセッサを横断するトリガチェーンのエンドツーエンドレイテンシを最適化 \cite{schliecker2009recursive}
     \end{itemize}
 \end{frame}
 
