--- a/bibtex/master_reference.bib
+++ b/bibtex/master_reference.bib
@@ -1,3 +1,32 @@
+@article{lelli2016deadline,
+  title={Deadline scheduling in the Linux kernel},
+  author={Lelli, Juri and Scordino, Claudio and Abeni, Luca and Faggioli, Dario},
+  journal={Software: Practice and Experience},
+  volume={46},
+  number={6},
+  pages={821--839},
+  year={2016},
+  publisher={Wiley Online Library}
+}
+
+@inproceedings{lipari2003resource,
+  title={Resource partitioning among real-time applications},
+  author={Lipari, Giuseppe and Bini, Enrico},
+  booktitle={15th Euromicro Conference on Real-Time Systems, 2003. Proceedings.},
+  pages={151--158},
+  year={2003},
+  organization={IEEE}
+}
+
+@inproceedings{shin2003periodic,
+  title={Periodic resource model for compositional real-time guarantees},
+  author={Shin, Insik and Lee, Insup},
+  booktitle={RTSS 2003. 24th IEEE Real-Time Systems Symposium, 2003},
+  pages={2--13},
+  year={2003},
+  organization={IEEE}
+}
+
 @inproceedings{choi2020chain,
   title={Chain-based fixed-priority scheduling of loosely-dependent tasks},
   author={Choi, Hyunjong and Karimi, Mohsen and Kim, Hyoseung},
