--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/main.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/main.tex
@@ -6,9 +6,14 @@
 \input{\beamerDir/setting.tex}
 
 
+%%%%% Mode %%%%%
+% \newcommand{\forme}[1]{#1}
+\newcommand{\forme}[1]{}
+
+
 %%%%% Front Cover %%%%%
 \title{Response-Time Analysis of ROS 2 Processing Chains Under Reservation-Based Scheduling}
-\subtitle{2019 ECRTS}
+\subtitle{Euromicro Conference on Real-Time System (ECRTS), 2019}
 \author{矢野 篤志}
 \date{\today}
 \institute[EMBIV]{EMBIV}
@@ -28,8 +33,14 @@
     \scriptsize\tableofcontents[hideallsubsections]
 \end{frame}
 
-\input{introduction.tex}
-\input{bachground.tex}
+% \input{introduction.tex}
+% \input{background.tex}
+% \input{ros_scheduling.tex}
+% \input{system_model.tex}
+% \input{response_time_analysis_for_processing_chains.tex}
+\input{case_study.tex}
+\input{related_work.tex}
+\input{limitations_extensions_and_conclusions.tex}
 
 \lastpage
 
