--- a/template.tex
+++ b/template.tex
@@ -6,6 +6,11 @@
 \input{\beamerDir/setting.tex}
 
 
+%%%%% Mode %%%%%
+% \newcommand{\forme}[1]{#1}
+\newcommand{\forme}[1]{}
+
+
 %%%%% Front Cover %%%%%
 \title{Title}
 \subtitle{year conference}
