--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/symbols_terms.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/symbols_terms.tex
@@ -1,1 +1,92 @@
 % !TeX root = main.tex
+
+% \begin{frame}{表記法・用語 1}
+%     \full{
+%         \begin{table}[tb]
+%             \adjustbox{max width=\textwidth, max height=\slideheight}{
+%                 \centering\begin{tabular}{|c|l|} \hline
+%                     $r_i$   & 予約サーバ                                                             \\\hline
+%                     $Q_i$   & $r_i$の予算                                                            \\\hline
+%                     $P_i$   & $r_i$の周期                                                            \\\hline
+%                     $sbf()$ & ある長さの区間において予約が提供するサービスの最小量を返す供給境界関数 \\\hline
+%                 \end{tabular}
+%             }
+%         \end{table}
+%     }
+% \end{frame}
+
+\begin{frame}{表記法・用語 1}
+    \full{
+        \begin{table}[tb]
+            \adjustbox{max width=\textwidth, max height=\slideheight}{
+                \centering\begin{tabular}{|c|l|} \hline
+                    $\mathcal{C}$               & エグゼキュータに割り当てられたすべてのコールバックのセット     \\\hline
+                    $\mathcal{C}^{\text {tmr}}$ & タイマーコールバックのセット                                   \\\hline
+                    $\mathcal{C}^{\text {srv}}$ & サービスコールバックのセット                                   \\\hline
+                    $\mathcal{C}^{\text {clt}}$ & クライアントコールバックのセット                               \\\hline
+                    $PP_{n}$                    & $n$ 番目のポーリング ポイント                                  \\\hline
+                    $PW_{n}$                    & $n$ 番目の処理ウィンドウ ($PP_{n}$ から $PP_{n+1}$ までの範囲) \\\hline
+                \end{tabular}
+            }
+        \end{table}
+    }
+\end{frame}
+
+\begin{frame}{表記法・用語 2}
+    \full{
+        \begin{table}[tb]
+            \adjustbox{max width=\textwidth, max height=\slideheight}{
+                \centering\begin{tabular}{|c|l|} \hline
+                    $\mathcal{D}=\{\mathcal{C}, \mathcal{E}\}$                                                                                     & ROSシステムのDAG                       \\\hline
+                    $\mathcal{C}=\left\{c_{1}, \ldots, c_{n}\right\}$                                                                              & コールバックセット                     \\\hline
+                    $\mathcal{E} \subseteq \mathcal{C} \times \mathcal{C}$                                                                         & エッジセット                           \\\hline
+                    $c_i$                                                                                                                          & コールバック                           \\\hline
+                    $e_i$                                                                                                                          & $c_i$のWCET                            \\\hline
+                    $\pi_i$                                                                                                                        & $c_i$の優先度                          \\\hline
+                    $\operatorname{pred}\left(c_{i}\right)=\left\{c_{j} \in \mathcal{C}: \exists\left(c_{j}, c_{i}\right) \in \mathcal{E}\right\}$ & $c_i$の先行コールバックのセット        \\\hline
+                    $\operatorname{succ}\left(c_{i}\right)=\left\{c_{j} \in \mathcal{C}: \exists\left(c_{i}, c_{j}\right) \in \mathcal{E}\right\}$ & $c_i$の後続コールバックのセット        \\\hline
+                    $c_s$                                                                                                                          & \tabml{ソースコールバック              \\\desc{ソースコールバック}{先行コールバックを持たないコールバック}} \\\hline
+                    シンクコールバック                                                                                                             & 後続コールバックを持たないコールバック \\\hline
+                \end{tabular}
+            }
+        \end{table}
+    }
+\end{frame}
+
+\begin{frame}{表記法・用語 3}
+    \full{
+        \begin{table}[tb]
+            \adjustbox{max width=\textwidth, max height=\slideheight}{
+                \centering\begin{tabular}{|c|l|} \hline
+                    $\eta_{s}^{e}(\Delta)$                                                             & 長さ $\Delta$ の任意の間隔でリリースできる $c_{s}$ のインスタンスの最大数 \\\hline
+                    $\gamma^{x}=\left(c_{s}, \ldots, c_{e}\right)$                                     & コールバックチェーン                                                      \\\hline
+                    $\operatorname{chains}(\mathcal{D})=\left\{\gamma^{1}, \ldots, \gamma^{s}\right\}$ & チェーンセット                                                            \\\hline
+                    $\mathcal{R}=\left\{r_{1}, \ldots, r_{w}\right\}$                                  & 予約のセット                                                              \\\hline
+                    $\mathcal{C}_k$                                                                    & $r_k$ 内のコールバックのセット                                            \\\hline
+                    $r_k$                                                                              & 予約サーバ                                                                \\\hline
+                    $\mathcal{C}_{k}^{\mathrm{tmr}}$                                                   & $r_k$に割り当てられたタイマコールバックのセット                           \\\hline
+                    $\mathcal{C}_{k}^{\mathrm{sub}}$                                                   & $r_k$に割り当てられたサブスクリプションコールバックのセット               \\\hline
+                    $\mathcal{C}_{k}^{\mathrm{clt}}$                                                   & $r_k$に割り当てられたクライアントコールバックのセット                     \\\hline
+                    $\mathcal{C}_{k}^{\mathrm{srv}}$                                                   & $r_k$に割り当てられたサービスコールバックのセット                         \\\hline
+                   $\mathcal{C}^{\text {evt }}$ & イベントソースのセット \\\hline
+                \end{tabular}
+            }
+        \end{table}
+    }
+\end{frame}
+
+\begin{frame}{表記法・用語 4}
+    \full{
+        \begin{table}[tb]
+            \adjustbox{max width=\textwidth, max height=\slideheight}{
+                \centering\begin{tabular}{|c|l|} \hline
+                   $lp_{k}\left(c_{i}\right)$ & $\pi_{i}$より低い優先度を持つ$\mathcal{C}_{k}$内のコールバックのセット \\\hline
+                   $hp_{k}\left(c_{i}\right)$ & $\pi_{i}$より高い優先度を持つ$\mathcal{C}_{k}$内のコールバックのセット \\\hline
+                    $\delta_(i,j)$ & $c_i$から$c_j$への伝搬遅延                           \\\hline
+                    $A$            & ビジーウィンドウへのオフセット                       \\\hline
+                    $R_i^{*}(A)$   & $A$に対する$c_i$の応答時間計算式における最小の正の解 \\\hline
+                \end{tabular}
+            }
+        \end{table}
+    }
+\end{frame}
